--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -17,11 +17,12 @@
     margin-top: 1em;
   }
 
+  // Inside your media query
   @media screen and (min-width: $sidebar-screen-min-width) {
-    height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
-    position: fixed;
-    padding-top: $masthead-height;
+    height: auto;                 // let it grow naturally
+    overflow-y: visible;          // no scrollbar needed
+    position: relative;           // sidebar flows under header
+    padding-top: 0;               // remove extra offset
   }
 
   @include breakpoint($large) {
