--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -18,11 +18,11 @@
   }
 
   @media screen and (min-width: $sidebar-screen-min-width) {
-    height: auto;               // let it grow naturally
-    overflow: visible;          // no extra scrollbar
-    position: sticky;           // sticks as you scroll
-    top: $masthead-height;      // starts below header
-    padding-top: 0;             // remove old offset
+    position: sticky;
+    top: 60px; // adjust to your header’s real height
+    height: auto;
+    overflow: visible;
+    padding-top: 0;
   }
 
   @include breakpoint($large) {
