fix header height

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -19,10 +19,9 @@
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     position: sticky;
-    top: 0px; // adjust to your header’s real height
     height: 25vh;
-    overflow: visible;
-    padding-top: 0;
+    overflow-y: auto;
+    padding-top: $masthead-height;
   }
 
   @include breakpoint($large) {
